removed stupid story

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
                                     <p>
                                     I am a PhD Student at Northwestern University. I am currently interested in thinking about solutions for learning Computer Science in situations where there is limited infrastuctural resources. 
-                                    I am from Nigeria where I did my undergraduate studies in Computer Science. I speak 3 languages. Two of them terribly and the third comfortably. I also teach at the University of Jos and I love doing it.
+                                    I am from Nigeria where I did my undergraduate studies in Computer Science. I also teach at the University of Jos and I love doing it.
                                     </p>
                                 </h2>
                                 <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="#works" >View Works and Papers</a>
