--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                                 <!-- /.slider -->
                                 <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
                                     <p>
-                                    I am a PhD Student at Northwestern University. I am currently interested in thinking about solutions for learning Computer Science in situations where there is limited infrastuctural resources. </p>
-                                    <p>
+                                    I am a PhD Student at Northwestern University. 
+                                    I am currently interested in thinking about solutions for learning Computer Science in situations where there is limited infrastuctural resources. 
                                     I am from Nigeria where I did my undergraduate studies in Computer Science. I also teach at the University of Jos and I love doing it.
                                     </p>
                                 </h2>
