saving from htdocs

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <li><a href="service.html">Research</a></li>
                             
                             
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.php">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -121,7 +121,7 @@
                                 <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
                                     <p>
                                     I am a PhD Student at Northwestern University. 
-                                    I am currently interested in thinking about solutions for learning Computer Science in situations where there is limited infrastucture. 
+                                    I am currently interested in thinking about solutions for learning Computer Science in situations where there is inadequate infrastucture. 
                                     I am from Nigeria where I did my undergraduate studies in Computer Science. I also teach at the University of Jos and I love doing it.
                                     </p>
                                 </h2>
