--- a/service.html
+++ b/service.html
@@ -91,7 +91,7 @@
                             </li>
                             <li><a href="service.html">Research</a></li>
                             
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.php">Contact</a></li>
                             
                         </ul>
                     </div>
