--- a/home.html
+++ b/home.html
@@ -85,12 +85,12 @@
                     <div class="main-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="index.html" >Home</a>
+                                <a href="home.html" >Home</a>
                             </li>
                             <li><a href="service.html">Research</a></li>
                             
                             
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.php">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
