--- a/service.html
+++ b/service.html
@@ -87,7 +87,7 @@
                     <div class="main-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="index.html" >Home</a>
+                                <a href="home.html" >Home</a>
                             </li>
                             <li><a href="service.html">Research</a></li>
                             
