add machine learning project

--- a/service.html
+++ b/service.html
@@ -169,7 +169,29 @@
                         </figure>
                     </div>
 
-                   
+                    <div class="col-sm-3">
+                         <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
+                            <div class="img-wrapper">
+                                <img src="images/portfolio/rsz_gradpredictor.png" class="img-responsive" alt="this is a title" >
+                                <div class="overlay">
+                                    <div class="buttons">
+                                        <a rel="gallery" class="fancybox" href="http://gradadmission.weebly.com/">Demo</a>        
+                                        <a target="_blank" href="http://gradadmission.weebly.com/">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <figcaption>
+                                <h4>
+                                    <a href="#">
+                                        Grad School Predictor       
+                                    </a>
+                                </h4>
+                                <p>
+                                    Predict Acceptance
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </div>                   
 
                     
 
