--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                             </li>
                             <li><a href="service.html">Research</a></li>
                             
-                            <li><a href="Mmachi-CV.pdf">CV</a></li>
+                            <li><a href="Mmachi-_Resume.pdf">Resume</a></li>
                             
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
