--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </li>
                             <li><a href="service.html">Research</a></li>
                                                         
-                            <li><a href="Mmachi-CV.pdf">CV</a></li>
+                            <li><a href="Mmachi_Resume.pdf">Resume</a></li>
                             
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
