--- a/service.html
+++ b/service.html
@@ -91,7 +91,7 @@
                             </li>
                             <li><a href="service.html">Research</a></li>
                             
-                            <li><a href="Mmachi-CV.pdf">CV</a></li>
+                            <li><a href="Mmachi_Resume.pdf">Resume</a></li>
                             
                             <li><a href="contact.html">Contact</a></li>
 
