--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
         
         <!-- Template Javascript Files
         ================================================== -->
+        <!-- jquery -->
+        <script src="js/vendor/jquery.min.js"></script>
         <!-- modernizr js -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <!-- jquery -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <!-- owl carouserl js -->
         <script src="js/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
