--- a/index.html
+++ b/index.html
@@ -38,22 +38,25 @@
         
         <!-- Template Javascript Files
         ================================================== -->
+        <!-- jquery -->
+        <script src="js/vendor/jquery.min.js"></script>
         <!-- modernizr js -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <!-- jquery -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+
+        <script src="js/jquery.fancybox.js"></script>
         <!-- owl carouserl js -->
         <script src="js/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
 
-        <script src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <!-- wow js -->
         <script src="js/wow.min.js"></script>
         <!-- slider js -->
         <script src="js/slider.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
+
         <!-- template main js -->
-        <script src="js/main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
         <!--
