--- a/service.html
+++ b/service.html
@@ -37,13 +37,13 @@
         <!-- my custom css -->
         <link rel="stylesheet" href="css/custom.css">
 
-        
+
         <!-- Template Javascript Files
         ================================================== -->
+        <!-- jquery -->
+        <script src="js/vendor/jquery.min.js"></script>
         <!-- modernizr js -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <!-- jquery -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <!-- owl carouserl js -->
         <script src="js/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
@@ -56,6 +56,7 @@
         <script src="js/jquery.fancybox.js"></script>
         <!-- template main js -->
         <script src="js/main.js"></script>
+
     </head>
     <body>
         <!--
